Thu Sep 25 20:56:45 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/dds/DDS/package.html:
        * java/dds/OpenDDS/DCPS/package.html:
        * java/docs:
        * java/docs/overview.html:

          Added documentation.
        
        * java/dds/OpenDDS/DCPS/transport/package.html:
        * java/dds/OpenDDS/package.html:

          Removed these files.

Thu Sep 25 20:04:39 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/build_scripts/generate_javadoc.pl:
        * java/dds/DDS/package.html:
        * java/dds/OpenDDS/DCPS/package.html:
        * java/dds/OpenDDS/DCPS/transport/package.html:
        * java/dds/OpenDDS/package.html:
        * java/docs:
        * java/docs/overview.html:

          Added initial javadoc support.

Thu Sep 25 19:04:17 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/tests/builtintopics/builtintopics_test.mpc:
        * java/tests/dcps_java_tests.lst:

          Added guards to Builin Topic tests.

Thu Sep 25 18:27:19 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/dds:
        * java/dds/DDS:
        * java/dds/OpenDDS/DCPS/BuiltinTopicUtils.java:
        * java/dds/dcps_java_optional.mpb:

          Added OpenDDS::DCPS Builtin Topic constants.

        * java/idl2jni/codegen/im_jni.cpp:
        * java/idl2jni/runtime:
        * java/idl2jni/tests/simple/simple.idl:

          Resolved JVM class resolution issue when generating native
          sequences (w/Adam Mitz).

        * java/tests/builtintopics:
        * java/tests/builtintopics/BuiltinTopicsTest.java:
        * java/tests/builtintopics/builtintopics.ini:
        * java/tests/builtintopics/builtintopics_test.mpc:
        * java/tests/builtintopics/domain_ids:
        * java/tests/builtintopics/run_test.pl:
        * java/tests/dcps_java_tests.lst:

          Added Builtin Topic tests.

        * java/tests/multirepo:
        * java/tests/multirepo/MultiRepoBase.java:
