@@ -24,12 +24,19 @@
     team at <a href="http://www.ociweb.com/">Object Computing, Incorporated</a>
     in St. Louis and Phoenix. It is released under the same generous license
     terms as ACE, TAO and MPC.</p>
+    
+    <p>The OpenDDS project is located at
+    <a href="http://www.opendds.org/">http://www.opendds.org/</a>.
+    </p>
 
     <h3>Documentation</h3>
+    <p>The OMG specification catalog for DDS is made available at
+    <a href="http://www.omg.org/technology/documents/dds_spec_catalog.htm">http://www.omg.org/technology/documents/dds_spec_catalog.htm</a>.
+    </p>
+
     <p>A developer's guide to OpenDDS is available at
     <a href="http://download.ociweb.com/OpenDDS/">http://download.ociweb.com/OpenDDS/</a>.
     </p>
-    
 
     <p>The developer's guide is also available as a chapter of the TAO
     Developer's Guide book set that can be purchased from
