@@ -1,3 +1,10 @@
+Thu Sep 25 21:27:47 UTC 2008  Steven Stallion  <stallions@ociweb.com>
+
+        * java/build_scripts/generate_javadoc.pl:
+        * java/docs/overview.html:
+
+          Updated javadoc documentation.
+
 Thu Sep 25 20:56:45 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * java/dds/DDS/package.html:
@@ -6,7 +13,7 @@ Thu Sep 25 20:56:45 UTC 2008  Steven Stallion  <stallions@ociweb.com>
         * java/docs/overview.html:
 
           Added documentation.
-        
+
         * java/dds/OpenDDS/DCPS/transport/package.html:
         * java/dds/OpenDDS/package.html:
 
